Finished steps up to and including 7

--- a/fun-programming.vbproj
+++ b/fun-programming.vbproj
@@ -65,7 +65,8 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MalEnvironment.vb" />
+    <Compile Include="Core.vb" />
+    <Compile Include="Environment.vb" />
     <Compile Include="Types.vb" />
     <Compile Include="Eval.vb" />
     <Compile Include="Printer.vb" />
